--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^17.0.2",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
+    "react-json-pretty": "^2.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "styled-components": "^5.3.0"
   },
   "scripts": {
